force-app/main/default/objects/Parentforce_Community_Settings__c/Parentforce_Community_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Parentforce Community Settings</label>
</CustomObject>