force-app/main/default/objects/Parentforce_Community_Settings__c/fields/BaseUrl__c.field-meta.xml
<CustomField>
    <fullName>BaseUrl__c</fullName>
    <label>Base Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>