force-app/main/default/objects/Parentforce_Community_Settings__c/fields/Payment_Method_Target__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Target__c</fullName>
    <description>This field we use in Recurring Payment body.</description>
    <label>Payment Method Target</label>
    <length>50</length>
    <type>Text</type>
</CustomField>